--- a/barroso-stats-proyecto-final.bib
+++ b/barroso-stats-proyecto-final.bib
@@ -63,3 +63,36 @@
    volume = {21},
    year = {2017},
 }
+@article{thorndike1953,
+   author = {Robert L. Thorndike},
+   issue = {4},
+   journal = {Psychometrika},
+   month = {12},
+   pages = {267-276},
+   title = {Who belongs in the family?},
+   volume = {18},
+   year = {1953},
+}
+@article{tibshirani2001,
+   author = {Robert Tibshirani and Guenther Walther and Trevor Hastie},
+   doi = {10.1111/1467-9868.00293},
+   issn = {1369-7412},
+   issue = {2},
+   journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
+   month = {7},
+   pages = {411-423},
+   title = {Estimating the Number of Clusters in a Data Set Via the Gap Statistic},
+   volume = {63},
+   year = {2001},
+}
+@article{rousseeuw1987,
+   author = {Peter J. Rousseeuw},
+   doi = {10.1016/0377-0427(87)90125-7},
+   issn = {03770427},
+   journal = {Journal of Computational and Applied Mathematics},
+   month = {11},
+   pages = {53-65},
+   title = {Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
+   volume = {20},
+   year = {1987},
+}
