--- a/barroso-stats-proyecto-final.bib
+++ b/barroso-stats-proyecto-final.bib
@@ -96,3 +96,11 @@
    volume = {20},
    year = {1987},
 }
+@article{gutenberg1944,
+   author = {B. Gutenberg and C. F. Richter},
+   journal = {Bulletin of the Seismological Society of America},
+   pages = {185-188},
+   title = {Frequency of earthquakes in California},
+   volume = {34},
+   year = {1944},
+}
