--- a/barroso-stats-proyecto-final.bib
+++ b/barroso-stats-proyecto-final.bib
@@ -104,3 +104,14 @@
    volume = {34},
    year = {1944},
 }
+@article{rodriguez2018,
+   author = {Quetzalcoatl Rodríguez-Pérez and F. Ramón Zuñiga},
+   doi = {10.1016/j.tecto.2018.03.019},
+   issn = {00401951},
+   journal = {Tectonophysics},
+   month = {6},
+   pages = {33-43},
+   title = {Imaging b -value depth variations within the Cocos and Rivera plates at the Mexican subduction zone},
+   volume = {734-735},
+   year = {2018},
+}
